--- a/style.css
+++ b/style.css
@@ -1,91 +1,39 @@
-.board-wrap {
+.big_picture {
 	display: flex;
 }
-.board {
-	display: flex;
-	flex-wrap: wrap;
-	width: 560px;
-	height: 560px;
-	border: 2px solid black;
+.prev, .next {
+	width: 40px;
+    line-height: 300px;
+    text-align: center;
+    font-size: 48px;
+	background-color: grey;
 }
-.square {
-	width: 70px;
-	height: 70px;
-	line-height: 70px;
-	text-align: center;
-}
-.black {
-	background-color: #111;
-}
-.black-figure {
-	padding: 5px;
-	background-color: black;
+.prev:hover,.next:hover {
 	color: white;
+	cursor: pointer;
 }
-.white {
-	background-color: #ddd;
+.big_picture img {
+	width: 600px;
+	height: 300px;
 }
-.white-figure {
-	padding: 5px;
-	background-color: white;
-	color: black;
+.small_picture {
+	width: 200px;
+	height: 100px;
 }
-.rows {
+#gallery {
+	display: flex;
+}
+.product {
 	display: flex;
 	flex-direction: column;
 }
-.row {
-	line-height: 70px;
-	height: 70px;
-}
-.columns {
+.basket {
 	display: flex;
-	margin-left: 10px;
+	flex-direction: column;
+	margin-top: 20px;
+	width: 300px;
+	background-color: lightgrey;
 }
-.column {
-	width: 70px;
-	text-align: center;
-}
-.chess-figure{
-	background-image: url(img/figures.png);
-	background-repeat: no-repeat;
-    background-size: 360px;
-}
-.pown-white{
-	
-    background-position: -295px 0;
-}
-.pown-black{
-	background-position: -295px -60px;
-}
-.king-white {
-	background-position: 7px 5px;
-}
-
-.king-black {
-	background-position: 7px -60px;
-}
-.queen-white{
-	background-position: -55px 5px;
-}
-.queen-black{
-	background-position: -55px -60px;
-}
-.knight-white{
-	background-position: -175px 5px;
-}
-.knight-black{
-	background-position: -175px -60px;
-}
-.bishop-white{
-	background-position: -117px 5px;
-}
-.bishop-black{
-	background-position: -117px -60px;
-}
-.rook-white{
-	background-position: -235px 5px;
-}
-.rook-black{
-	background-position: -235px -60px;
+.basket span {
+	background-color: lightblue;
 }
